TestSuite/errors/err0425.pas
{$ifndef asd}
{$resource 'НеСуществующийФайл'}
{$endif asd}
begin
  
end.